# aresource

./: .pre-commit-config.yaml  README.md  pyproject.toml
.githooks/: update
.github/workflows/: python.yml  release.yml
src/aresource/: __init__.py  base.py  manager.py
src/aresource/resource/: __init__.py  callback.py  context.py
src/aresource/resources/: asyncpg.py
src/aresource/resources/aiohttp/: __init__.py  session.py  web.py
src/aresource/resources/files/: __init__.py  base.py  bytes.py  hocon.py  ini.py  json.py  path.py  yaml.py
tests/: test_base.py  test_manager.py
tests/data/: test.ini  test.json
tests/resources/: test_aiohttp.py  test_files.py
