[project]
name = "aresource"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Babka",email = "159peter951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = []

[project.urls]
repository = "https://github.com/xbabka01/aresource"

[tool.poetry]
packages = [{include = "aresource", from = "src"}]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-ruff (>=0.5,<0.6)",
    "pytest-mypy (>=1.0.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.pytest.ini_options]
addopts = """
--strict-markers
--tb=short

--cov=aresource
--cov-report=html
--cov-report=xml
--cov-report=term

--ruff
--ruff-format

--mypy
"""
asyncio_mode = "auto"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "SIM", "Q", "RUF"]
ignore = []

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
files = ["src/aresource", "tests"]
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pyhocon"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
